2004-09-13  Sebastien Pouliot  <sebastien@ximian.com>

	* SqlClientPermissionAttributeTest.cs: New. Unit tests for SqlClient
	PermissionAttribute.

2004-09-02 Umadevi S <sumadevi@novell.com>
	* SqlCommandTest.cs - added file. Testing ExecuteNonQuery

2004-09-02 Umadevi S <sumadevi@novell.com>
	* SqlDataReaderTest.cs - added file

2004-08-20 Umadevi S <sumadevi@novell.com>
        * Added testcase in SqlDataAdapter.cs for Fillschema

2004-08-19 Gert Driesen <drieseng@users.souceforge.net>
	* SqlConnectionTest.cs: Added testcases for bug #63165.

2004-08-19 Umadevi S <sumadevi@novell.com>
 	* Added file SqlDataAdapterTest.cs - to test update method on a 
	datatable